Fix overlap on small screens

--- a/client/my-sites/patterns/style.scss
+++ b/client/my-sites/patterns/style.scss
@@ -1,3 +1,5 @@
+@import "@wordpress/base-styles/breakpoints";
+
 .is-section-patterns {
 	.layout__content {
 		padding: 0;
@@ -11,6 +13,10 @@
 	.is-logged-in {
 		.lpc-header-nav-wrapper {
 			padding-top: 32px;
+
+			@media ( max-width: $break-medium ) {
+				padding-top: 46px;
+			}
 		}
 	}
 
